--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
       <li class="divider"></li>
       <li><%= link_to "About", page_path("about") %></li>
       <li class="divider"></li>
-      <li><a href="#">Curriculum Vitae</a></li>
+      <li><li><%= link_to "Curriculum Vitae", page_path("resume") %></a></li></li>
       <li class="divider"></li>
       <li><%= link_to "Blog", posts_path %></li>
       <li class="divider"></li>
@@ -32,9 +32,9 @@
           <li class="divider"></li>
           <li><%= link_to "Teaching", page_path("teaching") %></a></li>
           <li class="divider"></li>
-          <li><a href="#">Professional Service and Participation</a></li>
+          <li><%= link_to "Professional Service and Participation", page_path("professional_service") %></a></li>
           <li class="divider"></li>
-          <li><a href="#">Curriculum Vitae</a></li>
+          <li><li><%= link_to "Curriculum Vitae", page_path("resume") %></a></li></li>
           <li class="divider"></li>
           <li><a href="#">Brief Dissertation Proposal</a></li>
           <li class="divider"></li>
