--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,40 +4,22 @@
     <p class="title" data-section-title><%= link_to "Personal Statement", page_path("personal_statement") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Health Education and Promotion</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Health Education and Promotion", page_path("health_education_and_promotion") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Outside Area of Expertise</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Outside Area of Expertise", page_path("outside_expertise") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Research and Writing</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Research and Writing", page_path("research_and_writing") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Teaching</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Teaching", page_path("teaching") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Professional Service and Participation</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Professional Service and Participation", page_path("professional_service") %></p>
   </section>
   <section>
-    <p class="title" data-section-title><a href="#">Curriculum Vitae</a></p>
-    <div class="content" data-section-content>
-      <p>Content of section.</p>
-    </div>
+    <p class="title" data-section-title><%= link_to "Curriculum Vitae", page_path("resume") %></p>
   </section>
   <section>
     <p class="title" data-section-title><a href="#">Brief Dissertation Proposal</a></p>
