--- a/app/views/pages/outside_expertise.html.erb
+++ b/app/views/pages/outside_expertise.html.erb
@@ -7,15 +7,18 @@
 <div class="row">
   <div class="large-9 push-3 columns">
     <div class="row">
-      <p>Leisure Psychology—ludology, the study of fun and games.</p>
-      
-      <p>When I came to the University of Missouri, I was deeply curious about the science of “fun.”  I had an intuitive appreciation for the ecological approach to health promotion—that people are better able to make good decisions about health behaviors when those decisions are easy, desirable, and tempting.  Primarily, in recognition of the many populations who are not attracted to traditional recreation like sports, and find explicit exercise tedious, I wanted to know, “How can we make physical activity more fun?” </p>
-      
-      <p>To address this question, I turned to the field of motivational psychology, primarily studying intrinsic motivation, but eventually realizing the important role that extrinsic motivation and amotivational constructs played in optimizing human engagement in recreation.  In particular, I applied my learning to the field of game design, exploring the inextricable relationship between ecological systems and agent behavior.</p>  
-      
-      <p>Naturally, most of these courses also contributed to my perspectives in Health Education and Promotion directly.</p>
+      <h3>Game Design Psychology</h3>
+
+      <p>My outside area of study is Leisure Psychology, also known as ludology, or the study of fun, play and games.  Increasingly, schools and businesses are turning towards game-based approaches to promote motivation and engagement in their students and employees.  Developmental psychologists have long recognized the important role of play in human learning.  I also used this learning to facilitate a deep understanding of game design principles.</p>
+
+      <p>With those professional goals in mind, when I came to the University of Missouri, I was deeply curious about the science of “fun.”  I had an intuitive appreciation for the ecological approach to health promotion—that people are better able to make good decisions about health behaviors when those decisions are easy, desirable, and tempting.  Primarily, in recognition of the many populations who are not attracted to traditional recreation like sports, and find explicit exercise tedious, I wanted to know, “How can we make physical activity more fun?” </p>
+
+      <p>To address this question, I turned to the field of motivational psychology, primarily studying intrinsic motivation, but eventually realizing the important role that extrinsic motivation and amotivational constructs played in optimizing human engagement in recreation.  Through the lens of game design, I explored the inextricable relationship between ecological systems and agent behavior.</p>
+
+      <p>Naturally, most of these courses also contributed to my perspectives in Health Education and Promotion directly as I broached the problems of our field, and strongly influence my professional work.</p>
 
       <p>Perspectives in Intrinsic Motivation and Experience Structures (Many of these integrate health content and/or education in some way relevant to my area of interest.  I’ve included a brief description of each course’s contribution to my learning goals):</p>
+
 
       <table>
       	<thead>
