--- a/app/views/pages/teaching.html.erb
+++ b/app/views/pages/teaching.html.erb
@@ -23,8 +23,175 @@
 	  </div>
 	</div>
 
-	<div class="row">
-	</div>
-  </div>
+  <div class="row">
+  	<p>I have extensive experience in the teaching field dating back to my time as an undergraduate student in Health and Human Performance Education.  Most recently, I served as a temporary member of the physical education faculty at Westminster College in Fulton, MO.</p>
+
+  	<h4>Health and Physical Education Instructor</h4>
+  	<p><em>Westminster College</em></p>
+
+  	<p>I accepted a contract on the physical education faculty at Westminster College for Fall 2011 to Spring 2012.  As an instructor, I had five primary objectives: 1) promoting transformative practices in physical education; 2) emphasizing hands-on, authentic learning experiences; 3) reinforcing reading, information literacy, and independent study skills; 4) enhancing courses with community and web resources; and 5) regularly communicating with students about expectations and progress.</p>
+
+  	<p>Below is a list of courses that I taught and their descriptions, with select attachments.</p>
+
+  	<p><strong>Courses:</strong></p>
+
+  	  <div class="large-10 large-offset-1 columns">
+	    <p><strong>History and Philosophy of P.E. & Sport</strong> (Fall 2011)</p>
+
+	    <p>This course introduces students to the historical and philosophical foundations of sport and physical education, with particular emphasis on contextual perspectives in regards to pedagogy.  The course will provide a background in world history and classical philosophies to empower interdisciplinary and multicultural perspectives that will facilitate discussions of theoretical and practical issues in contemporary physical education and sport.</p>
+
+	    <p><strong>Elementary Health Education Methods</strong> (Fall 2011)</p>
+
+	    <p>This course examines the principles of teaching health, physical fitness, and safety for wellness and optimal development focusing on the needs of children.</p>
+
+	    <p><strong>Measurement and Evaluation of P.E. & Sport </strong> (Fall 2011)</p>
+
+	    <p>This course will examine various tools of measurement and analyze the purposes, values, and limitations of measurement tools in relation to objectives.  Methods will be applied to a variety of professional areas, such as teaching, athletic training/rehabilitation, biomechanics, and exercise physiology.</p>
+
+	    <p><strong>Elementary Physical Education Methods</strong> (Spring 2012)</p>
+
+	    <p>By identifying patterns of growth and development, students will be able to develop methods to successfully teach fundamental movement skills and physical education concepts through quality instruction, games, dance, health-related fitness and perceptual-motor activities.  Practicum is included.  This course is required for K-12 Physical Education majors.</p>
+
+	    <p><strong>Adapted Physical Education </strong> (Spring 2012)</p>
+
+	    <p>This course is designed to identify the symptomatology, typical behavioral aberrations, sources of referral, and principles and challenges related to physical education of the student with special needs.  Instruction is directed to modifying motor and general fitness activities so that a learning environment suitable to persons with special needs and capabilities is developed.  Directed practicum experience is included.</p>	
+
+	    <p><strong>Boffer Fighting and Medieval Roleplay</strong> (Spring 2012, experimental physical activity course)</p>
+
+	    <p>This activity course teaches students how to play an alternative sport, live-action fantasy role–play (LARP) boffer fighting, following the current edition of the Amtgard rulebook. Through fast-paced but safe combat simulation students develop fitness and athletic ability, exercise the flexible and creative possibilities that alternative game structures allow, and learn combat strategies across many unique scenarios. Students explore basic sport and recreational constructs within this context, as well as the integration of unique constructs such as fantasy, narration, theater, and historical elements throughout athletic events.</p><br />			
+  	  </div>
+    </div>
+
+    <div class="row">
+      <h4>Other Teaching Experiences:</h4>
+      <br />
+      	<p><strong>K-12 Substitute Teacher</strong></p>
+      	<p>Columbia Public Schools | 2008-2009</p>
+
+      	<ul>
+      	  <li>Observed many P.E. and health programs and dozens of teachers</li>
+      	  <li>Administered lesson plans as provided by regular instructor</li>
+      	  <li>Created new lessons during extended instructor absences</li>
+      	  <li>Enforced behavioral expectations and ensured continuity of student learning outcomes</li>
+      	  <li>Reported all relevant information (tardies, other infractions, lesson status) to regular instructor</li>
+      	</ul>
+
+      	<p><strong>Graduate Assistant to Instructional Technology Dept.</strong></p>
+      	<p>Austin Peay State University | 2007-2008</p>
+
+      	<ul>
+      	  <li>Assisted Educational Technology faculty in their professorial duties</li>
+      	  <li>Prepared accreditation presentation for NCATE</li>
+      	  <li>Assisted students and faculty with software applications, including Blackboard, D2L, and Livetext</li>
+      	  <li>Assisted students with educational technology applications and portfolio development</li>
+      	  <li>Offered classes and on-call individual assistance with departmental expectations for graduation</li>
+      	  <li>Provided hardware/software troubleshooting and computer maintenance</li>
+      	</ul>
+
+      	<p><strong>6-12 Physical Education and Health Clinical Teaching</strong></p>
+      	<p>Kenwood Middle & Rossview High Schools | 2006</p>
+
+      	<ul>
+      	  <li>RHS 9-12 secondary health physical education instructor.</li>
+      	  <li>RHS Taught four sections freshman P.E.; one section Strength and Conditioning; one section Health</li>
+      	  <li>KMS 6-8 health and physical education instructor.</li>
+      	  <li>KMS Taught four sections P.E., two sections Health</li>
+      	  <li>Provided instruction; prepared lesson plans, assignments, and assessment criterion and instruments</li>
+      	  <li>Maintained behavioral expectations following school-prescribed classroom management guidelines</li>
+      	</ul>
+
+      	<p><strong>Resident Adviser & Martial Arts Instructor</strong></p>
+      	<p>Tri-County Upward Bound, Clarksville, TN | 2005</p>
+
+      	<ul>
+      	  <li>Acted as a resident adviser to rural low-SES secondary students on APSU campus over summer</li>
+      	  <li>Organized, chaperoned, and provided transportation to recreational events</li>
+      	  <li>Enforced campus and program code of conduct</li>
+      	  <li>Administered daily martial arts instruction</li>
+      	</ul>
+
+      	<p><strong>Teacher & Tutor</strong></p>
+      	<p>High School Upward Bound, Clarksville, TN | 2005</p>
+
+      	<ul>
+      	  <li>Honored with “Outstanding Teacher of the Year” award in 2005</li>
+      	  <li>Created lessons for and taught a variety of subjects for low-SES, college-bound students</li>
+      	  <li>Teaching subjects included Rhythm and Dance, Anatomy, Choir, and English</li>
+      	  <li>Provided after-school, one-on-one remedial tutoring for a variety of subjects</li>
+      	  <li>Prepared and led student performances for program banquets</li>
+      	  <li>Supervised high school students on college campus and chaperoned field trips</li>
+      	</ul>
+
+      	<p><strong>Pre-School Music & Recreation Teacher</strong></p>
+      	<p>First Presbyterian Preschool, Clarksville, TN | 2002-2003</p>
+
+      	<ul>
+      	  <li>Designed and administered dance, song, and play lessons for children aged 1-5</li>
+      	  <li>Developed and presented bi-annual musical performances</li>
+      	</ul>
+
+      	<h4>Coursework:</h4>
+
+      	<table>
+      	<thead>
+      	  <tr>
+      	    <td>Course Name</td>
+      	    <td>Course Number</td>
+      	    <td>Grade</td>
+      	  </tr>
+      	</thead>
+      	<tbody>
+      	  <tr>
+      	  	<td><strong>Seminar in Curriculum Improvement</strong></td>
+      	  	<td>EDUC6500</td>
+      	  	<td>C</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU seminar course emphasized improving general curricular practices in education with a program reform approach, particularly the application of objective development, assessment, and analysis.  Assessment was based on discussion, weekly assignments, and a summative research paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Seminar in Sociocultural Foundations of Educ.</strong></td>
+      	  	<td>EDUC6400</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU course explored the role of culture and diversity in academic settings from a sociological and anthropological perspective.  It examined the sensitive treatment of students with different racial, ethnic, and cultural backgrounds.  Assessment consisted of weekly assignments and two research papers.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Education Computer Applications</strong></td>
+      	  	<td>EDUC5611</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU course introduced modern applications of technology in education today, including the development of educational tools, allocation of resources, and classroom management software and assessment applications.  The course was assessed through weekly application assignments as well as a school board project implementation proposal.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>The Reflective Practitioner</strong></td>
+      	  	<td>EDUC5150</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU capstone seminar course examined the role of reflection and results-oriented practices in education.  A process-oriented approach to educational practices and self-improvement was applied.  Assessment included reflective papers and a video analysis of teaching.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Teaching and Learning</strong></td>
+      	  	<td>EDUC5550</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU educational psychology course examined the fundamental developmental relationship between teacher and student agency, learning environment, human development, and major educational theories and ideas.  This course was assessed by weekly assignments and a summative theory paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Advanced Studies in Special Education</strong></td>
+      	  	<td>SPED6550</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This APSU course examined issues in special education, including historical and contemporary ethical issues, issues related to the assessment of disability status, and the developmental needs and challenges for people with disabilities.  Assessment included weekly assignment and a summative research paper.</td>
+      	  </tr>	  
+      	</tbody>
+      </table>	
+      </div>	
+    </div>
   <%= render 'layouts/sidebar' %>
 </div>
