Added content to CV page

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -7,6 +7,200 @@
 <div class="row">
   <div class="large-9 push-3 columns">
 	<div class="row">
+	  <h3>Education</h3>
+
+	  	<p><strong>PhD in Health Education and Promotion</strong></p>
+	  	<p>University of Missouri | Spring 2014 (Expected)</p>
+
+	  	<p><strong>M.A. Ed. in Curriculum and Instruction, P.E. and Health Concentration</strong></p>
+	  	<p>Austin Peay State University | May 2008</p>
+
+	  	<p><strong>B.S. in Health and Human Performance, Physical Education Concentration</strong></p>
+	  	<p>Minors in Education and Music</p>
+	  	<p>Austin Peay State University | December 2006</p><br />
+
+	  <h4>Certifications</h4>
+
+	    <p>Illinois: K-12 Physical Education | Certificate #1670678</p>
+	    <p>Illinois: K-12 Health Education | Certificate #1670679</p>
+	    <p>Missouri: K-12 Physical Education | Certificate #0421425</p>
+	    <p>Missouri: K-12 Health | Certificate #0421425</p>
+	    <p>Heartsaver CPR | American Heart Association</p><br />
+
+	  <h4>Relevant Work Experiences</h4>
+		
+		<h5>Lead Project Manager</h5>
+	    <p>Anarchum</p>
+	      	
+      	<p>2012-Present | Columbia, MO</p>
+
+      	<ul>
+      	  <li>Designed the Anarchum game system to promote physical activity for special populations</li>
+      	  <li>As lead designer, created numerous primary and supplemental instructional manuals</li>
+      	  <li>Applied principles of learning and motivation to promote non-traditional athleticism</li>
+      	  <li>Developed a commercial model for sustainable support of sport</li>
+      	  <li>Recruited and managed additional team members to expand project scope</li>
+      	</ul>
+
+		<h5>Adjunct Health and Physical Education Instructor</h5>
+	    <p>Westminster College</p>
+	      	
+      	<p>2011-2012 | Fulton, MO</p>
+
+      	<p><strong>Courses</strong></p>
+      	<p>History and Philosophy of P.E. & Sport (Fall 2011)</p>
+      	<p>Elementary Health Education Methods (Fall 2011)</p>
+      	<p>Measurement and Evaluation of P.E. & Sport (Fall 2011)</p>
+      	<p>Elementary Physical Education Methods (Spring 2012)</p>
+      	<p>Adapted Physical Education (Spring 2012)</p>
+      	<p>Boffer Fighting and Medieval Roleplay (Spring 2012, experimental physical activity course)</p>
+
+
+      	<ul>
+      	  <li>Enhanced courses with web applications and resources</li>
+      	  <li>Regularly communicated with students about expectations and progress</li>
+      	  <li>Emphasized hands-on, authentic learning experiences</li>
+      	  <li>Reinforced reading, information literacy, and independent study skills</li>
+      	</ul>
+
+		<h5>K-12 Substitute Teacher</h5>
+	    <p>Columbia Public Schools</p>
+	      	
+      	<p>2008-2009 | Columbia, MO</p>
+
+      	<ul>
+      	  <li>Observed many P.E. and health programs and dozens of teachers</li>
+      	  <li>Administered lesson plans as provided by regular instructor</li>
+      	  <li>Created new lessons during extended instructor absences</li>
+      	  <li>Enforced behavioral expectations and ensured continuity of student learning outcomes</li>
+      	  <li>Reported all relevant information (tardies, other infractions, lesson status) to regular instructor</li>
+      	</ul>
+
+      	<h5>Graduate Assistant to Instructional Technology Dept.</h5>
+      	<p>Austin Peay State University</p> 
+
+      	<p>2007-2008 | Clarksville, TN</p>
+
+      	<ul>
+      	  <li>Assisted Educational Technology faculty in their professorial duties</li>
+      	  <li>Prepared accreditation presentation for NCATE</li>
+      	  <li>Assisted students and faculty with software applications, including Blackboard, D2L, and Livetext</li>
+      	  <li>Assisted students with educational technology applications and portfolio development</li>
+      	  <li>Offered classes and on-call individual assistance with departmental expectations for graduation</li>
+      	  <li>Provided hardware/software troubleshooting and computer maintenance</li>
+      	</ul>
+
+      	<h5>6-12 Physical Education and Health Clinical Teaching</h5>
+      	<p>Kenwood Middle & Rossview High Schools</p>
+
+      	<p>2006 | Clarksville, TN</p>
+
+      	<ul>
+      	  <li>RHS 9-12 secondary health physical education instructor.</li>
+      	  <li>RHS Taught four sections freshman P.E.; one section Strength and Conditioning; one section Health</li>
+      	  <li>KMS 6-8 health and physical education instructor.</li>
+      	  <li>KMS Taught four sections P.E., two sections Health</li>
+      	  <li>Provided instruction; prepared lesson plans, assignments, and assessment criterion and instruments</li>
+      	  <li>Maintained behavioral expectations following school-prescribed classroom management guidelines</li>
+      	</ul>
+
+      	<h5>Resident Adviser & Martial Arts Instructor</h5>
+      	<p>Tri-County Upward Bound</p> 
+
+      	<p>2005 | Clarksville, TN</p>
+
+      	<ul>
+      	  <li>Acted as a resident adviser to rural low-SES secondary students on APSU campus over summer</li>
+      	  <li>Organized, chaperoned, and provided transportation to recreational events</li>
+      	  <li>Enforced campus and program code of conduct</li>
+      	  <li>Administered daily martial arts instruction</li>
+      	</ul>
+
+      	<h5>Teacher & Tutor</h5>
+      	<p>High School Upward Bound</p>
+
+      	<p>2005 | Clarksville, TN</p>
+
+      	<ul>
+      	  <li>Honored with “Outstanding Teacher of the Year” award in 2005</li>
+      	  <li>Created lessons for and taught a variety of subjects for low-SES, college-bound students</li>
+      	  <li>Teaching subjects included Rhythm and Dance, Anatomy, Choir, and English</li>
+      	  <li>Provided after-school, one-on-one remedial tutoring for a variety of subjects</li>
+      	  <li>Prepared and led student performances for program banquets</li>
+      	  <li>Supervised high school students on college campus and chaperoned field trips</li>
+      	</ul>
+
+      	<h5>Pre-School Music & Recreation Teacher</h5>
+      	<p>First Presbyterian Preschool</p>
+
+      	<p>2002-2003 | Clarksville, TN</p>
+
+      	<ul>
+      	  <li>Designed and administered dance, song, and play lessons for children aged 1-5</li>
+      	  <li>Developed and presented bi-annual musical performances</li>
+      	</ul>
+
+     <h4>Research</h4>
+
+     <p>Bai, H.; Brunette, C.A.; Chompreeda, K.; Gao, J.; Gil Arroyo, C.L.; Lin, L; Martin, A.T.; Sartorius, C.J.; Steuber, C.L.; Vock, M.L.; Winn III, J.E.; Sotomayor, S. and Barbieri, C. (in progress). Spirituality and Leisure: An Auto-Ethnographic Life-History Study. Abstract accepted for an oral presentation at the 2011 Northeastern 	Recreation Research (NERR) Symposium. Sagamore Resort, Bolton Landing, NY. (April 10 – April 12, 2011). </p>
+
+	<h4>Research Interests</h4>
+
+	  <p><strong>Primary</strong></p>
+
+	  <ul>
+	    <li>Factors affecting physical activity and game engagement</li>
+	    <li>Gamification in educational and commercial settings</li>
+	    <li>Integration of academic learning in physically active settings</li>
+	    <li>Physical education curriculum</li>
+	    <li>Recreation and health psychology and sociology</li>
+	    <li>Physical education and health classroom management practices</li>
+	  </ul>
+
+	  <p><strong>Secondary</strong></p>
+
+	  <ul>
+	  	<li>Emotional health and wellness</li>
+	  	<li>Sleep quality and sleep disorders</li>
+	  	<li>Effective integration of classroom technology</li>
+	  	<li>Nutrition behaviors</li>
+	  	<li>Smoking cessation</li>
+	  	<li>Autism</li>
+	  </ul>
+
+	  <h4>Conferences</h4>
+
+	    <p>2010: The Impact of Physical Activity on Academic Achievement, KU</p>
+	    <p>2010: Annual Obesity Conference, KU</p>
+
+	  <h4>Technical Skills</h4>
+
+	    <ul>
+	      <li>Proficient with both PC and Mac</li>
+	      <li>Microsoft Office and Open Office applications</li>
+	      <li>Online learning systems such as Blackboard, D2L, Moodle and Livetext</li>
+	      <li>Hardware and software maintenance and troubleshooting, including anti-malware</li>
+	      <li>Developing HTML skills</li>
+	    </ul>
+
+	  <h4>Journals</h4>
+
+	    <p><em>Journal of Physical Education, Recreation and Dance</em></p>
+	    <p><em>Research Quarterly for Exercise and Sport</em></p>
+	    <p><em>Physical Educator</em></p>
+
+	  <h4>Organizations</h4>
+
+	   	<p>Member (2011-2012): International Positive Psychology Association</p>
+	   	<p>Member (2005-2008): Student Tennessee Education Association, Austin Peay State University</p>
+	   	<p>Founder (2003): Community's Organization for Wellness, Austin Peay State University</p>
+
+	  <h4>Volunteer</h4>
+
+	    <p>2012 Boffer Fighting and Medieval Roleplay physical activity class at Westminster College</p>
+	    <p>2007-2012 Online wellness advisement in support fora</p>
+	    <p>2011 Walk for MS </p>
+
 
     </div>	
   </div>
