--- a/app/assets/stylesheets/custom_styles.scss
+++ b/app/assets/stylesheets/custom_styles.scss
@@ -41,3 +41,21 @@ table thead {
     background: #ccc;
   }
 }
+
+#home {
+  .home-box {
+    padding: 20px;
+    margin-right: 10px;
+    margin-top: 50px; 
+  }
+  #p-one{
+
+    margin-left: 30px;
+  }
+  #p-two{
+    margin-left: 60px;
+  }
+  h3 {
+    margin-left: 90px;
+  }
+}
