--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,11 @@
-<div class="row">
-  <div class="large-7 large-centered columns"><h1>Welcome to my portfolio!</h1></div>
+<%= render 'layouts/backstretch' %>
+<div id="home">
+  <div class="row">
+    <div class="large-12 home-box">
+	  <h1 class="opaque-text">Hi, I’m Jeremy, and I’m on a mission to make wellness fun and easy.</h1>
+		<p id="p-one">Are you here with a question about <strong>Health</strong> and <strong>Wellness</strong>?</p>
+		<p id="p-two">To learn about <strong>Game Design</strong> and <strong>Motivation</strong>?  Or general <strong>Education?</strong></p>
+	  <h3>How can I improve your life today?</h3>
+	</div>
 </div>
-<div class="row">
-  <div class="large-4 columns">
-  	<%= image_tag('jeremy-pic.jpg') %>
-  </div>
-  <div class="large-8 columns">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sagittis blandit est, eget ultrices leo rutrum eu. Mauris eu mauris et ligula posuere vulputate. Curabitur ligula nulla, rutrum vitae eleifend ut, facilisis sit amet leo. Quisque posuere enim a felis accumsan tempus. Duis viverra metus nec nulla fermentum vel elementum lacus convallis. Suspendisse id nisi malesuada metus hendrerit molestie. Maecenas semper aliquam magna, nec fermentum libero convallis nec. Sed a est vitae quam vehicula tempor. Nulla nec nisi justo, non ultrices ipsum. Vivamus posuere elementum leo, facilisis pellentesque massa lobortis nec. Vivamus nibh purus, ultrices non mollis quis, tempor sit amet metus. Aenean porttitor, urna a congue molestie, est erat laoreet risus, eu dictum lacus tortor at quam. Nunc condimentum ultrices turpis. Nunc tincidunt turpis a lacus accumsan facilisis. Pellentesque erat mi, commodo quis viverra in, eleifend non diam.</p>
-
-  <p>In ac augue libero, nec feugiat tellus. Sed vestibulum bibendum sapien nec sodales. Maecenas tempus tincidunt libero at condimentum. Vivamus convallis lectus in mauris posuere placerat. Suspendisse laoreet interdum arcu, condimentum cursus mi tempus at. Aliquam id dignissim sem. Proin ligula orci, venenatis sit amet feugiat nec, accumsan non libero.</p>
-  </div>	
 </div>
